--- a/data/department/marketing.yaml
+++ b/data/department/marketing.yaml
@@ -1,3 +1,3 @@
 ---
 profile::platform::baseline::windows::leaduser::leaduser: 'marketlead'
-profile::platform::baseline::windows::leaduser::passwprd: 'password3'
+profile::platform::baseline::windows::leaduser::password: 'password3'
