--- a/data/department/sales.yaml
+++ b/data/department/sales.yaml
@@ -1,3 +1,3 @@
 ---
 profile::platform::baseline::windows::leaduser::leaduser: 'saleslead'
-profile::platform::baseline::windows::leaduser::passwprd: 'alwaysbeclosing'
+profile::platform::baseline::windows::leaduser::password: 'alwaysbeclosing'
